fixed avatar overlapping

--- a/css/index.styl
+++ b/css/index.styl
@@ -117,7 +117,6 @@ breakpoint(point, value = 0)
     transition-timing-function cubic-bezier(.3, 0, 0, 1.4)
     margin 0 auto
     border-radius 5px
-    overflow hidden
 
     +breakpoint("mobile")
       -webkit-transition -webkit-transform .4s, opacity .3s
